[package]
name = "cutnet"
version = "0.1.0"
description = "Network Administration Tool - NetCut Clone"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cutnet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Network operations
pnet = "0.34"
pnet_packet = "0.34"
pnet_datalink = "0.34"
pnet_transport = "0.34"
get_if_addrs = "0.5"

# MAC address manipulation
mac_address = "1.1"

# Hostname lookup
hostname = "0.3"

# System information
sysinfo = "0.30"

# Error handling
thiserror = "1"
anyhow = "1"

# Regex for validation
regex = "1"

# Logging
log = "0.4"
env_logger = "0.10"

# Globals
once_cell = "1.20"
ipnet = "2.10"

dns-lookup = "2"

# Cross-platform admin check
is_executable = "1"

# For raw socket operations (platform-specific)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "netioapi", "winsock2"] }

